css tweaks for order page

--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -9,7 +9,7 @@
 			<div class="box-content-new box-order-status">
 				<div class="message">
 					<div class="dialog-title">Accept this order?</div>
-					<div class="dialog-subtext">You <b>must</b> mark orders as accepted, picked up, </br> and delivered to get paid correctly.</div>
+					<div class="dialog-subtext">You <b>must</b> mark orders as accepted,<br> picked up, and delivered to get</br>  paid correctly.</div>
 
 					<a class="order-action-undo" href ng-click="reject()">no</a>
 				</div>
