--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -99,221 +99,227 @@
 <!-- /actions -->
 
 <div class="content-padding">
+	<div class="status"></div>
 
+	<div class="dialog-message dialog-message-notice check-reminder">
+		<b>Double check</b> to make sure you received exactly the right food!
+	</div>
 
-			<div class="status"></div>
-			<div class="dialog-message dialog-message-notice check-reminder">
-				<b>Double check</b> to make sure you received exactly the right food!
+	<div class="header order-header">
+		#{{order.id_order}}
+	</div>
+
+	<div class="order">
+		<div class="order-item-info">
+			<div class="order-item-block left">
+				<div class="order-icon" ng-if="order.delivery_type=='takeout'"><i class="fa fa-taxi"></i></div>
+				<div class="order-icon" ng-if="order.delivery_type=='delivery'"><i class="fa fa-car"></i></div>
+				<div class="order-info">
+					<span ng-if="order.delivery_type=='takeout'">Takeout</span>
+					<span ng-if="order.delivery_type=='delivery'">Delivery</span>
+				</div>
 			</div>
-			<div class="header order-header">
-				#{{order.id_order}}
+			<div class="order-item-block right">
+				<div class="order-icon" ng-if="order.pay_type=='card'"><i class="fa fa-credit-card"></i></div>
+				<div class="order-icon" ng-if="order.pay_type=='cash'"><i class="fa fa-money"></i></div>
+				<div class="order-info">
+					<span ng-if="order.pay_type=='card'">Card</span>
+					<span ng-if="order.pay_type=='cash'">Cash</span>
+				</div>
 			</div>
-			<div class="order">
-				<div class="order-item-info">
-					<div class="order-item-block left">
-						<div class="order-icon" ng-if="order.delivery_type=='takeout'"><i class="fa fa-taxi"></i></div>
-						<div class="order-icon" ng-if="order.delivery_type=='delivery'"><i class="fa fa-car"></i></div>
-						<div class="order-info">
-							<span ng-if="order.delivery_type=='takeout'">Takeout</span>
-							<span ng-if="order.delivery_type=='delivery'">Delivery</span>
-						</div>
-					</div>
-					<div class="order-item-block right">
-						<div class="order-icon" ng-if="order.pay_type=='card'"><i class="fa fa-credit-card"></i></div>
-						<div class="order-icon" ng-if="order.pay_type=='cash'"><i class="fa fa-money"></i></div>
-						<div class="order-info">
-							<span ng-if="order.pay_type=='card'">Card</span>
-							<span ng-if="order.pay_type=='cash'">Cash</span>
-						</div>
-					</div>
-					<div class="divider"></div>
-					<div class="order-item-block left">
-						<div class="order-icon"><i class="fa fa-clock-o"></i></div>
-						<div class="order-info">
-							At {{order.time_formated}}
-						</div>
-					</div>
-					<div class="order-item-block right">
-						<div class="order-icon"><i class="fa fa-heart"></i></div>
-						<div class="order-info">
-							<span ng-if="order._delivery_estimated_time">By </br> {{order._delivery_estimated_time}}</span>
-							<span ng-if="!order._delivery_estimated_time">None</span>
-						</div>
-					</div>
-					<div class="divider"></div>
+			<div class="divider"></div>
+			<div class="order-item-block left">
+				<div class="order-icon"><i class="fa fa-clock-o"></i></div>
+				<div class="order-info">
+					At {{order.time_formated}}
 				</div>
+			</div>
+			<div class="order-item-block right">
+				<div class="order-icon"><i class="fa fa-heart"></i></div>
+				<div class="order-info">
+					<span ng-if="order._delivery_estimated_time">By </br> {{order._delivery_estimated_time}}</span>
+					<span ng-if="!order._delivery_estimated_time">None</span>
+				</div>
+			</div>
+			<div class="divider"></div>
+		</div>
+		<div class="divider"></div>
+		<div class="divider dots"></div>
+		<div class="order-item-block-big">
+			<div class="order-icon2"><i class="fa fa-money"></i></div>
+			<div class="order-info2 order-info-small">
+				{{order._instructions_payment}}
+			</div>
+		</div>
+		<div class="order-item-block-big">
+			<div class="order-icon2"><i class="fa fa-hand-o-right"></i></div>
+			<div class="order-info2 order-info-small">
+				{{order._instructions_food}}
+			</div>
+		</div>
+		<div class="order-item-block-big" ng-if="order._instructions_fax">
+			<div class="order-icon2"><i class="fa fa-exclamation-triangle"></i></div>
+			<div class="order-info2 order-info-small">
+				{{order._instructions_fax}}
+			</div>
+		</div>
+
+		<div class="divider"></div>
+		<div class="divider dots"></div>
+		<span ng-if="order._stealth_notification">
+			<div class="order-item-block-bigger">
+				Skip the line. Tell restaurant: <i>"I'm here to pick up a faxed order for {{order.name}}, #{{order.id_order}}</i>".
+			</div>
+			<div class="divider"></div>
+			<div class="divider dots"></div>
+		</span>
+		<br>
+
+		<div class="info-block">
+			<div class="order-icon3"><i class="icon-user"></i></div>
+			<div class="order-info">
+				<div class="info-name">{{order.name}}</div>
+				<div class="info-phone"><a href="tel:+1{{order.phone}}">{{order.phone | formatPhone}}</a></div>
 				<div class="divider"></div>
-				<div class="divider dots"></div>
-				<div class="order-item-block-big">
-					<div class="order-icon2"><i class="fa fa-money"></i></div>
-					<div class="order-info2 order-info-small">
-						{{order._instructions_payment}}
-					</div>
-				</div>
-				<div class="order-item-block-big">
-					<div class="order-icon2"><i class="fa fa-hand-o-right"></i></div>
-					<div class="order-info2 order-info-small">
-						{{order._instructions_food}}
-					</div>
-				</div>
-				<div class="order-item-block-big" ng-if="order._instructions_fax">
-					<div class="order-icon2"><i class="fa fa-exclamation-triangle"></i></div>
-					<div class="order-info2 order-info-small">
-						{{order._instructions_fax}}
-					</div>
-				</div>
 
+				<div class="info-address"><p class="order-info-address"><a href="http://maps.apple.com/?q={{order.address}}">{{order.address | nl2br}}</a></p></div>
+
+			</div>
+		</div>
+
+		</br>
+
+		<div class="info-block">
+			<div class="order-icon3"><i class="icon-chef"></i></div>
+			<div class="order-info">
+				<div class="info-name">{{order._restaurant_name}}</div>
+				<div class="info-phone"><a href="tel:+1{{order._restaurant_phone}}">{{order._restaurant_phone | formatPhone}}</a></div>
 				<div class="divider"></div>
-				<div class="divider dots"></div>
-				<span ng-if="order._stealth_notification">
-					<div class="order-item-block-bigger">
-						Skip the line. Tell restaurant: <i>"I'm here to pick up a faxed order for {{order.name}}, #{{order.id_order}}</i>".
-					</div>
-					<div class="divider"></div>
-					<div class="divider dots"></div>
-				</span>
-				<br>
 
-				<div class="info-block">
-					<div class="order-icon3"><i class="icon-user"></i></div>
-					<div class="order-info">
-						<div class="info-name">{{order.name}}</div>
-						<div class="info-phone"><a href="tel:+1{{order.phone}}">{{order.phone | formatPhone}}</a></div>
-						<div class="divider"></div>
+				<div class="info-address"><p class="order-info-address"><a href="http://maps.apple.com/?q={{order._restaurant_address}}">{{order._restaurant_address | nl2br }}</a></p></div>
+			</div>
+		</div>
 
-						<div class="info-address"><p class="order-info-address"><a href="http://maps.apple.com/?q={{order.address}}">{{order.address | nl2br}}</a></p></div>
+		</br>
 
-					</div>
-				</div>
+		<a href="http://maps.apple.com/?daddr={{order.address}}&saddr={{order._restaurant_address}}">
+			<div class="order-map" style="background: url('https://maps.googleapis.com/maps/api/staticmap?size=640x300&markers=color:green%7Clabel:A%7C{{order.address | clearAddress}}&markers=color:red%7Clabel:B%7C{{order._restaurant_lat}},{{order._restaurant_lon}}&sensor=false&visual_refresh=true');"></div>
+		</a>
+		<br>
 
-				</br>
+		<span ng-if="order.notes">
+			<div class="order-comment-arrow"></div>
+			<div class="order-comment">
+				<i class="fa fa-bullhorn"></i> <p> &nbsp; {{ order.notes | nl2br }}</p>
+			</div>
+		</span>
+		<span ng-if="!order.notes">
+		<br>
+		</span>
 
-				<div class="info-block">
-					<div class="order-icon3"><i class="icon-chef"></i></div>
-					<div class="order-info">
-						<div class="info-name">{{order._restaurant_name}}</div>
-						<div class="info-phone"><a href="tel:+1{{order._restaurant_phone}}">{{order._restaurant_phone | formatPhone}}</a></div>
-						<div class="divider"></div>
+		<br><br>
+		<div class="divider dots"></div>
+		<br><br>
+		<div class="content-padding box-content2">
+			<table width="100%" celpadding="0" cellspacing="0" class="detail">
+				<thead>
+					<td class="topitem">Qty</td>
+					<td class="topitem itemname">Item</td>
+					<td class="topitem itemprice">Store Price</td>
+				</thead>
+				<tbody>
+					<tr ng-repeat="dish in order._dishes">
+						<td class="fooditem">1</td>
+						<td class="fooditem dish-name">{{dish.name}} {{dish.options.without_default_options}} {{dish.options.with_option}} {{dish.options.select_options}} </td>
+						<td class="fooditem dish-price">
+							${{dish.price.regular | formatPrice}}
+						</td>
+					</tr>
+					<tr class="class">
+						<td></td>
+						<td class="dish-price">Subtotal</td>
+						<td class="dish-price">
+							${{order.price | formatPrice}}
+						</td>
+					</tr>
+					<!-- IN CASE WE NEED TO ADD THIS IN THE FUTURE
+					<tr ng-if="order._tip">
+						<td></td>
+						<td style="text-align:right; font-size:24px;color:#666;">Tip <span ng-if="order.tip_type != 'number'"></span></td>
+						<td style="text-align:right; font-size:24px;color:#666;">${{order._tip | formatPrice}}</td>
+					</tr>
 
-						<div class="info-address"><p class="order-info-address"><a href="http://maps.apple.com/?q={{order._restaurant_address}}">{{order._restaurant_address | nl2br }}</a></p></div>
-					</div>
-				</div>
+					<tr ng-if="order.delivery_fee">
+						<td></td>
+						<td style="text-align:right; font-size:24px;color:#666;">Delivery Fee</td>
+						<td style="text-align:right; font-size:24px;color:#666;">${{order.delivery_fee | formatPrice}}</td>
+					</tr>
+					<tr ng-if="order.service_fee">
+						<td></td>
+						<td style="text-align:right">Service Fee</td>
+						<td>${{order.service_fee | formatPrice}}</td>
+						<php if( $isDriverCockpit ) {  />
+					</tr>
+					-->
+					<tr>
+						<td></td>
+						<td class="dish-price">Tax</td>
+						<td class="dish-price">
+							${{order._tax | formatPrice}}
+						</td>
+					</tr>
+					<tr class="order-total-row">
+						<td></td>
+						<td class="order-total-text">Total</td>
+						<td class="dish-price">
+							${{order._final_price | formatPrice}}
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 
-				</br>
-
-				<a href="http://maps.apple.com/?daddr={{order.address}}&saddr={{order._restaurant_address}}">
-					<div class="order-map" style="background: url('https://maps.googleapis.com/maps/api/staticmap?size=640x300&markers=color:green%7Clabel:A%7C{{order.address | clearAddress}}&markers=color:red%7Clabel:B%7C{{order._restaurant_lat}},{{order._restaurant_lon}}&sensor=false&visual_refresh=true');"></div>
-				</a>
-				<br>
-
-				<span ng-if="order.notes">
-					<div class="order-comment-arrow"></div>
-					<div class="order-comment">
-						<i class="fa fa-bullhorn"></i> <p> &nbsp; {{ order.notes | nl2br }}</p>
-					</div>
-				</span>
-				<span ng-if="!order.notes">
-				<br>
-				</span>
-
-				<br><br>
-				<div class="divider dots"></div>
-				<br><br>
-				<div class="content-padding box-content2">
-					<table width="100%" celpadding="0" cellspacing="0" class="detail">
-						<thead>
-							<td class="topitem">Qty</td>
-							<td class="topitem itemname">Item</td>
-							<td class="topitem itemprice">Store Price</td>
-						</thead>
-						<tbody>
-							<tr ng-repeat="dish in order._dishes">
-								<td class="fooditem">1</td>
-								<td class="fooditem dish-name">{{dish.name}} {{dish.options.without_default_options}} {{dish.options.with_option}} {{dish.options.select_options}} </td>
-								<td class="fooditem dish-price">
-									${{dish.price.regular | formatPrice}}
-								</td>
-							</tr>
-							<tr class="class">
-								<td></td>
-								<td class="dish-price">Subtotal</td>
-								<td class="dish-price">
-									${{order.price | formatPrice}}
-								</td>
-							</tr>
-							<!-- IN CASE WE NEED TO ADD THIS IN THE FUTURE
-							<tr ng-if="order._tip">
-								<td></td>
-								<td style="text-align:right; font-size:24px;color:#666;">Tip <span ng-if="order.tip_type != 'number'"></span></td>
-								<td style="text-align:right; font-size:24px;color:#666;">${{order._tip | formatPrice}}</td>
-							</tr>
+	</div>
 	
-							<tr ng-if="order.delivery_fee">
-								<td></td>
-								<td style="text-align:right; font-size:24px;color:#666;">Delivery Fee</td>
-								<td style="text-align:right; font-size:24px;color:#666;">${{order.delivery_fee | formatPrice}}</td>
-							</tr>
-							<tr ng-if="order.service_fee">
-								<td></td>
-								<td style="text-align:right">Service Fee</td>
-								<td>${{order.service_fee | formatPrice}}</td>
-								<php if( $isDriverCockpit ) {  />
-							</tr>
-							-->
-							<tr>
-								<td></td>
-								<td class="dish-price">Tax</td>
-								<td class="dish-price">
-									${{order._tax | formatPrice}}
-								</td>
-							</tr>
-							<tr class="order-total-row">
-								<td></td>
-								<td class="order-total-text">Total</td>
-								<td class="dish-price">
-									${{order._final_price | formatPrice}}
-								</td>
-							</tr>
-							<tr ng-if="order._tip_with_cash">
-								<td class="order-tip-cash" colspan="3">Customer is tipping with cash</td>
-							</tr>
-							<tr>
-								<td class="your-take" colspan="4">
-									<!--MAKE THE "CUSTOMER TOTAL" AND "YOUR TAKE" HERE -->
-									<div class="cust-pay-method">
-										<div ng-if="order.pay_type=='cash'"><div class="pay-icon" ><i class="fa fa-money"></i></div><span class="cust-pay-method-text">Customer is paying by {{order.pay_type}}</span></div>
-										<div ng-if="order.pay_type=='card'"><div class="pay-icon" ><i class="fa fa-credit-card"></i></div><span class="cust-pay-method-text">Customer is paying by {{order.pay_type}}</span></div>
-										<?//<span><i class="icon-{{order.pay_type}}"></i> Customer is paying by {{order.pay_type}}</span> ?>
-									</div>
+		
+		
+	<div class="order-item-block-big">
+		<div class="order-icon2">
+			<i class="fa fa-money" ng-if="order.pay_type=='cash'"></i>
+			<i class="fa fa-credit-card" ng-if="order.pay_type=='card'"></i>
+		</div>
+		<div class="order-info2 order-info-small">
+			Customer is paying by {{order.pay_type}}
+		</div>
+	</div>
 	
-									<div class="customer-total-block">
-										<span class="customer-total-price">${{order.final_price_plus_delivery_markup | formatPrice}}</span></br></br>
-										<span class="customer-total-text"><strong>Customer total</strong></span>
-										</br>
-									</div>
+
+
+	<div class="customer-total-block total-block">
+		<span class="order-total-price"><span class="tip-total-price-dollar">$</span>{{order.final_price_plus_delivery_markup | formatPrice}}</span></br></br>
+		<span class="order-total-text">Customer total</span>
+		</br>
+	</div>
 	<? /*
-									<div class="tip-total-block">
-										<?//SAME CSS CONFIGURATION ?>
-										<span class="tip-total-price">${{driverTake.total | formatPrice}}</span></br></br>
-										<span class="tip-total-text"><strong>Your take (fee+tip)</strong></span>
-										</br>
-									</div>
-		*/ ?>
-									<div class="tip-total-block">
-										<?//SAME CSS CONFIGURATION ?>
-										<span class="tip-total-price">${{order._tip | formatPrice}}</span></br></br>
-										<span class="tip-total-text"><strong>Tip</strong></span>
-										</br>
-									</div>
-		
-		
-								</td>
-						</tbody>
-					</table>
-				</div>
+	<div class="tip-total-block">
+		<?//SAME CSS CONFIGURATION ?>
+		<span class="tip-total-price">${{driverTake.total | formatPrice}}</span></br></br>
+		<span class="tip-total-text"><strong>Your take (fee+tip)</strong></span>
+		</br>
+	</div>
+	*/ ?>
+	<div class="tip-total-block total-block">
+		<span class="order-total-price">
+			<span ng-if="order._tip_with_cash || order._tip == 0">CASH</span>
+			<span ng-if="!order._tip_with_cash && order._tip != 0"><span class="tip-total-price-dollar">$</span>{{order._tip | formatPrice}}</span>
+		</span></br></br>
+		<span class="order-total-text">Tip</span>
+		</br>
+	</div>
+	
+	<div class="divider"></div><br><br><br>
 
 
-			</div>
 
 
 </div>
