--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -207,8 +207,9 @@
 		</div>
 		<div class="left-menu-fix"></div>
 		<div class="snap-drawer snap-drawer-right side-menu" id="side-menu-right">
-			<div class="drawer-right-content">
-				<div ng-include="'assets/view/tickets-side-list.html'"></div>
+			<div class="drawer-right-content" ng-controller="SideSupportCtrl">
+				<div ng-include="'assets/view/tickets-side-list.html'" ng-if="!viewTicket"></div>
+				<div ng-include="'assets/view/tickets-side-view.html'" ng-if="viewTicket"></div>
 			</div>
 		</div>
 	</div>
