converted tel links to sms

--- a/include/views/default/cockpit2/frontend/drivers/drivers-shifts.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-shifts.phtml
@@ -39,7 +39,7 @@
 
 								<span ng-if="driver.name">
 									<span class="driver-name">{{driver.name}}</span><br>
-									<a href="tel:{{driver.phone | formatPhone}}" class="driver-phone">{{driver.phone | formatPhone}}</a>
+									<a href="sms:{{driver.phone | formatPhone}}" class="driver-phone">{{driver.phone | formatPhone}}</a>
 								</span>
 
 							</td>
