fixed sms links

--- a/include/views/default/cockpit2/frontend/drivers/drivers-orders.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-orders.phtml
@@ -60,7 +60,7 @@
 								{{order.name}}
 							</div>
 							<div class="phone-pointer">
-								<a href="sms:{{order.phone}}">{{order.phone | formatPhone}}</a>
+								<a href="sms:{{order.phone}}" target="_system">{{order.phone | formatPhone}}</a>
 							</div>
 						</div>
 						<div class="divider"></div>
