--- a/include/views/default/crunchbutton/frontend/help.phtml
+++ b/include/views/default/crunchbutton/frontend/help.phtml
@@ -12,7 +12,7 @@
 		Try contacting the restaurant you ordered from.
 		<br /><br />
 		<b>Need to contact Crunchbutton?</b><br />
-		Text us at <a href="sms:+16467831444">(646) 783-1444</a> or email us at <a href="mailto:{{customers}}">{{customers}}</a>.
+		Text us at <a href="sms:+16467831444" target="_system">(646) 783-1444</a> or email us at <a href="mailto:{{customers}}">{{customers}}</a>.
 		<br /><br />
 	</p>
 	<br /><br />
