--- a/include/views/default/crunchbutton/frontend/order.phtml
+++ b/include/views/default/crunchbutton/frontend/order.phtml
@@ -68,7 +68,7 @@
 			<br>
 
 			You can reach Crunchbutton by texting <b>
-			<span ng-show="isMobile"><a href="sms:+16467831444">{{ '6467831444' | formatPhone }}</a></span>
+			<span ng-show="isMobile"><a href="sms:+16467831444" target="_system">{{ '6467831444' | formatPhone }}</a></span>
 			<span ng-show="!isMobile">{{ '6467831444' | formatPhone }}</span>
 			</b>
 
