--- a/include/views/default/crunchbutton/frontend/support.phtml
+++ b/include/views/default/crunchbutton/frontend/support.phtml
@@ -16,7 +16,7 @@
 
 		<div class="support-maximized-content">
 			<span ng-show="!support.thanks">
-				Text <a href="sms:+16467831444">(646) 783-1444</a> or message us here:
+				Text <a href="sms:+16467831444" target="_system">(646) 783-1444</a> or message us here:
 			</span>
 			<div ng-show="support.thanks">
 				Thanks, we'll get back to you as fast as we can.
