--- a/include/views/default/seven/frontend/order.phtml
+++ b/include/views/default/seven/frontend/order.phtml
@@ -85,7 +85,7 @@
 			<div class="order-info">
 				<p>
 					For website or app support, please call or text
-					<br /><b>Crunchbutton: <a href="sms:(646) 783-1444" target="_blank">{{ '6467831444' | formatPhone }}</a></b>
+					<br /><b>Crunchbutton: <a href="sms:(646) 783-1444" target="_system">{{ '6467831444' | formatPhone }}</a></b>
 				</p>
 			</div>
 			<div class="divider"></div>
