--- a/include/views/default/cockpit2/layout/html.body.phtml
+++ b/include/views/default/cockpit2/layout/html.body.phtml
@@ -48,6 +48,16 @@
 					</tr>
 				</table>
 			</a>
+			
+			<a href="/drivers/docs" class="menu-link" ng-if="account.user.permissions.GLOBAL || account.isDriver" ng-class="{'nav-active': (navigation.page == 'drivers-documents')}">
+				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
+					<tr>
+						<td class="side-menu-icon"><i class="fa fa-briefcase"></i></td>
+						<td class="side-menu-label">Documents</a></td>
+					</tr>
+				</table>
+			</a>
+
 
 			<a href="/drivers/summary" class="menu-link" ng-if="account.user.permissions.GLOBAL || account.isDriver" ng-class="{'nav-active': (navigation.page == 'drivers-summary')}">
 				<table cellpadding="0" cellspacing="0" class="side-menu-wrap">
