added text or sms feature

--- a/include/views/default/cockpit2/frontend/tickets/tickets-side-list.phtml
+++ b/include/views/default/cockpit2/frontend/tickets/tickets-side-list.phtml
@@ -17,7 +17,7 @@
 
 		<div ng-if="!account.user.permissions.GLOBAL">
 			<br>
-			<p>To contact Crunchbutton support, please text <br><br><a href="sms:16467831444" target="_system">(646) 783-1444</a></p>
+			<p>To contact Crunchbutton support, please text <br><br><a href ng-click="callText('16467831444')">(646) 783-1444</a></p>
 		</div>
 	</div>
 </div>
