--- a/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-help.phtml
@@ -8,7 +8,7 @@
 
 	<p>
 		<b>Have questions during a delivery?</b><br>
-		TXT us at <a href="sms:646-783-1444" target="_system">646-783-1444</a>
+		TXT us at <a ng-click="callText('646-783-1444')">646-783-1444</a>
 		<br><br>
 		<b>When do I fill out my schedule for the next week?</b><br>
 		Make sure to fill out your schedule by Monday at 8PM EDT at the latest.
