--- a/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
+++ b/include/views/default/cockpit2/frontend/drivers/drivers-order.phtml
@@ -184,7 +184,7 @@
 			<div class="order-icon3"><i class="icon-user"></i></div>
 			<div class="order-info">
 				<div class="info-name">{{order.name}}</div>
-				<div class="info-phone"><a href="sms:+1{{order.phone}}" target="_system">{{order.phone | formatPhone}}</a></div>
+				<div class="info-phone"><a href ng-click="callText(order.phone)">{{order.phone | formatPhone}}</a></div>
 				<div class="divider"></div>
 
 				<div class="info-address"><p class="order-info-address"><a href="http://maps.apple.com/?q={{order.address}}">{{order.address | nl2br}}</a></p></div>
